# fretboard-training

./: Cargo.toml  README.md  build.rs
src/: main.rs  note_generator.rs
