[package]
name = "fretboard-trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27"
egui = "0.27"
rand = "0.8"

[build-dependencies]
winres = "0.1"

# Strip symbols to reduce executable size in release mode
[profile.release]
strip = true
